--- a/css/fluid/default.css
+++ b/css/fluid/default.css
@@ -8,18 +8,27 @@ Beware, the contents is currently not fluid! :D
 */
 
 body{
-font-family:Arial, Verdana, Helvetica, sans-serif;
-font-size:10px;
-margin:0;
-padding:0;
+	font-family:Arial, Verdana, Helvetica, sans-serif;
+	font-size:12px;
+	margin:0;
+	padding:0;
 }
-a{color:blue;text-decoration:none;}
-a:hover{color:blue;text-decoration:underline;}
-img{border:none;vertical-align:middle;}
+a{
+	color:blue;
+	text-decoration:none;
+}
+a:hover{
+	color:blue;
+	text-decoration:underline;
+}
+img{
+	border:none;
+	vertical-align:middle;
+}
 .page_title_text{
-font-weight:bold;
-color:black;
-TEXT-ALIGN:center;
+	font-weight:bold;
+	color:black;
+	TEXT-ALIGN:center;
 }
 p.good{
     font-weight:bold;
@@ -30,167 +39,166 @@ p.bad{
     color:red;
 }
 table{
-width:auto; /* automatic width */
-margin:0 auto;
-margin-bottom:5px;
+	width:auto; /* automatic width */
+	margin:0 auto;
+	margin-bottom:5px;
 }
 table.selection{}
 th{ /* table heading */
-font-weight:normal;
-font-size:10px;
-background-color:#cccce5;
-color:#330000;
-text-align:center;
+	font-weight:normal;
+	font-size:12px;
+	background-color:#cccce5;
+	color:#330000;
+	text-align:center;
 }
 th.number{
-font-weight:normal;
-font-size:10px;
-background-color:#cccce5;
-color:#330000;
-text-align:right;
+	font-weight:normal;
+	font-size:12px;
+	background-color:#cccce5;
+	color:#330000;
+	text-align:right;
 }
 td{
-font-family:Arial, Verdana, Helvetica;
-font-size:10px;
-text-align:left;
+	font-family:Arial, Verdana, Helvetica;
+	font-size:12px;
+	text-align:left;
 }
 td.select{
-background-color:#eee;
+	background-color:#eee;
 }
 td.number{
-text-align:right;
+	text-align:right;
 }
 .centre{ /* used */
-  margin:0 auto;
-  text-align:center;
-  margin-bottom:5px;
+	margin:0 auto;
+	text-align:center;
+	margin-bottom:5px;
 }
 
 input{
-font-family:Arial, Verdana, Helvetica;
-font-size:10px;
+	font-family:Arial, Verdana, Helvetica;
+	font-size:12px;
 }
 input.number{
-text-align:right;
+	text-align:right;
 }
 input.image{
-border-width:0px;
-background-color:transparent;
+	border-width:0px;
+	background-color:transparent;
 }
 input:hover{
-background:lightblue;
+	background:lightblue;
 }
 input.inputerror{
-background-color:#fddbdb;
+	background-color:#fddbdb;
 }
 select{
-font-family:Arial, Verdana, Helvetica;
-font-size:10px;
+	font-family:Arial, Verdana, Helvetica;
+	font-size:12px;
 }
 select:hover{
-background:lightblue;
+	background:lightblue;
 }
 select.selecterror{
-background-color:#fddbdb;
+	background-color:#fddbdb;
 }
 textarea{ /* default style for textarre */
-font-family:Arial, Verdana, Helvetica;
-font-size:10px;
+	font-family:Arial, Verdana, Helvetica;
+	font-size:12px;
 }
-textarea:hover{
-}
+textarea:hover{}
 textarea.texterror{
-background-color:#fddbdb;
+	background-color:#fddbdb;
 }
 
 .EvenTableRows{
-background-color:#CCCCCC;
+	background-color:#CCCCCC;
 }
 .OddTableRows{
-background-color:#EEEEEE;
+	background-color:#EEEEEE;
 }
 
 div.error{
-background-color:#fddbdb;
-color:red;
-border:1px solid red;
+	background-color:#fddbdb;
+	color:red;
+	border:1px solid red;
 }
 div.warn{
-background-color:#f5dbfd;
-color:maroon;
-border:1px solid maroon;
+	background-color:#f5dbfd;
+	color:maroon;
+	border:1px solid maroon;
 }
 div.success{
-background-color:#b9ecb4;
-color:darkgreen;
-border:1px solid darkgreen;
+	background-color:#b9ecb4;
+	color:darkgreen;
+	border:1px solid darkgreen;
 }
 div.info{
-background-color:#c7ccf6;
-color:navy;
-border:1px solid navy;
+	background-color:#c7ccf6;
+	color:navy;
+	border:1px solid navy;
 }
 div.csv{
-        background:lightgray;
-        color:black;
-        border:1px solid black;
-        PADDING-LEFT:3px;
-        Z-INDEX:1;
-        width:50%;
-        FLOAT:none;
-        VISIBILITY:visible;
-        MARGIN:0 auto;
-        POSITION:static;
-        font-family:Arial, Verdana, Helvetica;
-        padding-top:1px;
-        padding-bottom:1px;
-        font-weight:normal;
-        font-size:10px;
-        TEXT-ALIGN:center;
+	background:lightgray;
+	color:black;
+	border:1px solid black;
+	PADDING-LEFT:3px;
+	Z-INDEX:1;
+	width:50%;
+	FLOAT:none;
+	VISIBILITY:visible;
+	MARGIN:0 auto;
+	POSITION:static;
+	font-family:Arial, Verdana, Helvetica;
+	padding-top:1px;
+	padding-bottom:1px;
+	font-weight:normal;
+	font-size:12px;
+	TEXT-ALIGN:center;
 }
 DIV.page_help_text{
-background:lightgrey url(images/help.png) top left no-repeat;
-BORDER:#a52a2a 1px solid;
-padding-top:2px;
-        padding-bottom:2px;
-PADDING-LEFT:10px;
-Z-INDEX:1;
-width:80%;
-FLOAT:none;
-VISIBILITY:visible;
-MARGIN:0 auto;
-POSITION:static;
-font-family:Arial, Verdana, Helvetica;
-        font-weight:normal;
-        font-size:10px;
-        color:black;
-TEXT-ALIGN:center;
+	background:lightgrey url(images/help.png) top left no-repeat;
+	BORDER:#a52a2a 1px solid;
+	padding-top:2px;
+	padding-bottom:2px;
+	PADDING-LEFT:10px;
+	Z-INDEX:1;
+	width:80%;
+	FLOAT:none;
+	VISIBILITY:visible;
+	MARGIN:0 auto;
+	POSITION:static;
+	font-family:Arial, Verdana, Helvetica;
+	font-weight:normal;
+	font-size:12px;
+	color:black;
+	TEXT-ALIGN:center;
 }
 
 .dpTbl{
-border:solid navy 1px;
-background:white;
+	border:solid navy 1px;
+	background:white;
 }
 .dpTD{
-border:0;
-width:20px;
-background-color:#EEEEEE;
-text-align:right;
+	border:0;
+	width:20px;
+	background-color:#EEEEEE;
+	text-align:right;
 cursor:pointer;
 }
 .dpDayHighlight{
-border:0;
-width:20px;
-background-color:yellow;
-text-align:right;
-cursor:pointer;
+	border:0;
+	width:20px;
+	background-color:yellow;
+	text-align:right;
+	cursor:pointer;
 }
 .dpTDHover{
-border:0;
-width:20px;
-background-color:#CCCCCC;
-text-align:right;
-cursor:pointer;
+	border:0;
+	width:20px;
+	background-color:#CCCCCC;
+	text-align:right;
+	cursor:pointer;
 }
 
 .table1{
@@ -200,57 +208,65 @@ cursor:pointer;
   margin:0 auto;
 }
 .tableheader{
-font-weight:normal;
-background-color:#cccce5;
-color:#330000;
+	font-weight:normal;
+	background-color:#cccce5;
+	color:#330000;
 }
 .notavailable{
-font-weight:lighter;
-font-style:italic;
-color:#555555;
+	font-weight:lighter;
+	font-style:italic;
+	color:#555555;
 }
 .label{ /* used */
-font-weight:bold;
-font-style:normal;
-font-size:12px;
-color:black;
-background-color:#cccccc;
+	font-weight:bold;
+	font-style:normal;
+	font-size:12px;
+	color:black;
+	background-color:#cccccc;
 }
 .table_index{
-background-color:#F1FFDD;
+	background-color:#F1FFDD;
 }
 
 .header{
-background-image:url("");
-background-repeat:no-repeat;
-background-attachment:fixed;
-border:none;
-margin:0px;
-padding:0px;
+	background-image:url("");
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	border:none;
+	margin:0px;
+	padding:0px;
 }
 
 button{
-font-size:10px;
+	font-size:12px;
 }
 button:hover{
-background:lightblue;
+	background:lightblue;
 }
 
 .OsRow{
-background-color:#234567;
-color:white;
+	background-color:#234567;
+	color:white;
 }
 
 /*li{
 list-style-image:url(bullet.gif);
 }*/
 
-#CanvasDiv{background-color:#cdf;color:white;}
+#CanvasDiv{
+	background-color:#cdf;
+	color:white;
+}
 
-#HeaderDiv{background-color:#569;overflow:hidden;}
+#HeaderDiv{
+	background-color:#569;
+	overflow:hidden;
+}
 #HeaderWrapDiv{}
 
-#AppInfoDiv{float:left;}
+#AppInfoDiv{
+	float:left;
+}
 #AppInfoCompanyDiv{float:left;}
 #AppInfoUserDiv{float:left;}
 #AppInfoUserDiv a{color:white;}
@@ -261,78 +277,78 @@ list-style-image:url(bullet.gif);
 #QuickMenuDiv ul{list-style:none;margin:0;padding:0;}
 #QuickMenuDiv li{display:inline;float:left;margin:2px 0;padding:0;}
 #QuickMenuDiv li a{
-background:#aae;
-border:1px outset #aae;
-border-top:1px solid #aae;
-border-radius: 0 0 7px 7px;
-color:black;
-padding:1px;
+	background:#aae;
+	border:1px outset #aae;
+	border-top:1px solid #aae;
+	border-radius: 0 0 7px 7px;
+	color:black;
+	padding:1px;
 }
 #QuickMenuDiv li a:hover{
-background:#cdf;
-border:1px outset #cdf;
-border-top:1px solid #cdf;
-text-decoration:none;
+	background:#cdf;
+	border:1px outset #cdf;
+	border-top:1px solid #cdf;
+	text-decoration:none;
 }
 
 #BodyDiv{
-clear:both;
-overflow:hidden;
-text-align:center;
-color:black;
+	clear:both;
+	overflow:hidden;
+	text-align:center;
+	color:black;
 }
 
 #MainMenuDiv{
-background:#569;
-width:100%;
-height:18px;
+	background:#569;
+	width:100%;
+	height:18px;
 }
 #MainMenuDiv ul{list-style:none;padding:0;margin:0;}
 #MainMenuDiv li{display:inline;float:left;margin:2px 0;padding:0;}
 #MainMenuDiv li a{
-background:#aae;
-border:1px outset #aae;
-border-bottom:1px solid #aae;
-border-radius: 7px 7px 0 0;
-color:black;
-padding:1px;
+	background:#aae;
+	border:1px outset #aae;
+	border-bottom:1px solid #aae;
+	border-radius: 7px 7px 0 0;
+	color:black;
+	padding:1px;
 }
 #MainMenuDiv li a:hover{
-background:#cdf;
-border:1px outset #cdf;
-border-bottom:1px solid #cdf;
-text-decoration:none;
+	background:#cdf;
+	border:1px outset #cdf;
+	border-bottom:1px solid #cdf;
+	text-decoration:none;
 }
 #MainMenuDiv .main_menu_selected a{
-background:#cdf;
-border:1px outset #cdf;
-border-bottom:1px solid #cdf;
+	background:#cdf;
+	border:1px outset #cdf;
+	border-bottom:1px solid #cdf;
 }
 
 /*** BODY - SUB MENU ***/
 .menu_group_item a{
 }
 .menu_group_items a:hover{
-color:#0000aa;
-text-decoration:underline;
+	color:#0000aa;
+	text-decoration:underline;
 }
 
 #SubMenuDiv{
-clear:both;
-float:left;
-display:table;
-background:#cdf;
-color:black;
-text-align:left;
-padding:1%;
-width:98%
+	clear:both;
+	float:left;
+	display:table;
+	background:#cdf;
+	color:black;
+	text-align:left;
+	padding:1%;
+	width:98%
 }
 #SubMenuDiv ul{
-list-style-type:none;
-padding:0;
-margin:0px;
-border:thin outset #ddd;
-background:#fff
+	list-style-type:none;
+	padding:0;
+	margin:0px;
+	border:thin outset #ddd;
+	background:#fff
 }
 #SubMenuDiv li{}
 #SubMenuDiv .menu_group_headers{background:#ddd;border:thin solid #ddd;text-align:center;}
@@ -344,14 +360,13 @@ background:#fff
 /*** FOOTER ***/
 
 #FooterDiv{
-clear:both;
-overflow:hidden;
-background:#569;
+	clear:both;
+	overflow:hidden;
+	background:#569;
 }
 #FooterWrapDiv{}
 #FooterLogoDiv{
-float:right;
-
+	float:right;
 }
 #FooterVersionDiv{}
 #FooterTimeDiv{}
