--- a/css/fresh/default.css
+++ b/css/fresh/default.css
@@ -18,8 +18,8 @@ the next project. :)
 ***/
 
 body {
-	font-family: Arial, Verdana, Helvetica, sans-serif;;
-	font-size: 10px;
+	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-size:12px;
 	margin:0;
 	padding:0;
 }
@@ -43,7 +43,7 @@ p.page_title_text {
 	padding-top: 2px;
 	padding-bottom: 2px;
 	font-weight: bold;
-	font-size: 10px;
+	font-size:12px;
 	color: black;
 	background-color: #C9D392;
 	width: 30%;
@@ -67,7 +67,7 @@ table.selection {
 }
 th {
 	font-weight: normal;
-	font-size: 10px;
+	font-size:12px;
 	background-color: #777C59;
 	color: white;
 	text-align: center;
@@ -80,7 +80,7 @@ th.number {
 }
 td {
 	font-family: Arial, Verdana, Helvetica, sans-serif;;
-	font-size: 10px;
+	font-size:12px;
 	text-align: left;
 }
 td.select {
@@ -95,7 +95,7 @@ div.centre { /* centering buttons / links */
 }
 input {
 	font-family: Arial, Verdana, Helvetica, sans-serif;;
-	font-size: 10px;
+	font-size:12px;
 }
 input.number{
 	text-align: right;
@@ -108,11 +108,11 @@ input:hover{
 }
 select {
 	font-family: Arial, Verdana, Helvetica, sans-serif;;
-	font-size: 10px;
+	font-size:12px;
 }
 textarea{
 	font-family: Arial, Verdana, Helvetica, sans-serif;
-	font-size: 10px;
+	font-size:12px;
 }
 textarea:hover{
 }
@@ -147,7 +147,7 @@ DIV.page_help_text {
 	background: lightgrey url(images/help.png) top left no-repeat;
 	BORDER: #a52a2a 1px solid;
 	padding-top:2px;
-        padding-bottom: 2px;
+	padding-bottom: 2px;
 	PADDING-LEFT: 10px;
 	Z-INDEX: 1;
 	width: 80%;
@@ -156,9 +156,9 @@ DIV.page_help_text {
 	MARGIN: 0 auto;
 	POSITION: static;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
-        font-weight: normal;
-        font-size: 10px;
-        color: black;
+	font-weight: normal;
+	font-size:12px;
+	color: black;
 	TEXT-ALIGN:center;
 }
 
